--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,55 +1,36 @@
 {
-  // Visit https://aka.ms/tsconfig to read more about this file
-  "include": ["src"],
-  "compilerOptions": {
-    // File Layout
-    "rootDir": "./src",
-    "baseUrl": ".",
-    // "outDir": "./dist",
+    // Visit https://aka.ms/tsconfig to read more about this file
+    "include": ["src"],
+    "compilerOptions": {
+        "rootDir": "./src",
+        "baseUrl": ".",
+        // "outDir": "./dist",
 
-    // Environment Settings
-    // See also https://aka.ms/tsconfig/module
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "target": "esnext",
-    "types": [],
-    // For nodejs:
-    // "lib": ["esnext"],
-    // "types": ["node"],
-    // and npm install -D @types/node
+        // Environment Settings
+        // See also https://aka.ms/tsconfig/module
+        "module": "esnext",
+        "moduleResolution": "bundler",
+        "target": "esnext",
+        "types": ["node"],
 
-    // JSON imports
-    "resolveJsonModule": true,
+        // JSON imports
+        "resolveJsonModule": true,
 
-    // Path aliases
-    "paths": {
-      "~/*": ["./src/*"]
-    },
+        // Other Outputs
+        "sourceMap": true,
+        "declaration": true,
+        "declarationMap": true,
 
-    // Other Outputs
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
+        // Stricter Typechecking Options
+        "noUncheckedIndexedAccess": true,
+        "exactOptionalPropertyTypes": true,
 
-    // Stricter Typechecking Options
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
-
-    // Style Options
-    // "noImplicitReturns": true,
-    // "noImplicitOverride": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noFallthroughCasesInSwitch": true,
-    // "noPropertyAccessFromIndexSignature": true,
-
-    // Recommended Options
-    "strict": true,
-    "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
-    "isolatedModules": true,
-    "noUncheckedSideEffectImports": true,
-    "moduleDetection": "force",
-    "skipLibCheck": true
-  }
+        "strict": true,
+        "jsx": "react-jsx",
+        "verbatimModuleSyntax": true,
+        "isolatedModules": true,
+        "noUncheckedSideEffectImports": true,
+        "moduleDetection": "force",
+        "skipLibCheck": true
+    }
 }
